--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,11 @@
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolores et iusto, magnam molestias nam provident repellendus sapiente unde. Accusamus atque eaque earum eius molestias omnis quisquam repellat suscipit totam?
 </p>
 
+<div class="container">
+    <p></p>
+</div>
 
+<script src="js/vendors.js"></script>
+<script src="js/bundle.js"></script>
 </body>
 </html>
