--- a/public/index.html
+++ b/public/index.html
@@ -3,16 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>F5 Angular</title>
+
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css"/>
 </head>
 <body>
-<h1>F5 Angular</h1>
-
-<p>
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto dolores et iusto, magnam molestias nam provident repellendus sapiente unde. Accusamus atque eaque earum eius molestias omnis quisquam repellat suscipit totam?
-</p>
 
 <div class="container">
-    <p></p>
+
 </div>
 
 <script src="js/vendors.js"></script>
