--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,15 @@
         </li>
     </ul>
 
-    <input class="form-control" ng-model="main.item" type="text"/>
-    <button class="btn btn-default" ng-click="main.addItem()">Add Item</button>
+    <form name="frm_add_item" class="form-inline" ng-submit="main.addItem(main.item)" novalidate>
+        <div class="form-group" ng-class="{'has-error': frm_add_item.item.$invalid}">
+            <input class="form-control" name="item" ng-model="main.item" type="text" required />
+            <span ng-if="frm_add_item.item.$error.required">You must add an Itme</span>
+            <button class="btn btn-default" type="submit">Add Item</button>
+        </div>
+    </form>
+
+    <br/>
 
     <p>
         {{main.title}}
