--- a/public/index.html
+++ b/public/index.html
@@ -261,7 +261,7 @@
 
         <div class="navbar-default sidebar" role="navigation">
             <div class="sidebar-nav navbar-collapse">
-                <ul class="nav" id="side-menu">
+                <ul class="nav" menu>
                     <li ng-repeat="item in main.menu track by $index" ng-include="'menu.html'"></li>
                 </ul>
 
