cheat sheets, ui-router remove from package.json

--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
-<html lang="en" ng-app="f5">
+<html lang="en" ng-app="f5" ng-cloak>
 <head>
     <meta charset="UTF-8">
     <title>F5 Angular</title>
 
     <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
+
+<style>
+    [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak { display: none !important; }
+</style>
 <body>
 
 <div class="container" ng-controller="MainCtrl as main">
