--- a/public/index.html
+++ b/public/index.html
@@ -9,20 +9,39 @@
 
 <style>
     [ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak { display: none !important; }
+
+    body {
+        min-height: 2000px;
+        padding-top: 70px;
+    }
 </style>
 <body>
 
 <div class="container" ng-controller="MainCtrl as main">
-    <h1 ng-bind="main.title"></h1>
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" ui-sref="dashboard">F5 Angular</a>
+            </div>
+            <div id="navbar" class="navbar-collapse collapse">
+                <ul class="nav navbar-nav">
+                    <li ui-sref-active="active"><a ui-sref="dashboard">Dashboard</a></li>
+                    <li ui-sref-active="active"><a ui-sref="items">Items <span class="badge default">{{main.items.length}}</span></a></li>
+                    <li ui-sref-active="active"><a ui-sref="form">Form</a></li>
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                </ul>
+            </div><!--/.nav-collapse -->
+        </div>
+    </nav>
 
-    <item-list items="main.items"></item-list>
-
-    <br/>
-
-    {{main.title}} <hr>
-    <p>
-        <span ng-repeat="item in main.items track by $index">{{item}} </span>
-    </p>
+    <ui-view></ui-view>
 </div>
 
 <script src="js/vendors.js"></script>
