--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,7 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li ui-sref-active="active"><a ui-sref="dashboard">Dashboard</a></li>
-                    <li ui-sref-active="active"><a ui-sref="items">Items <span class="badge default">{{main.items.length}}</span></a></li>
-                    <li ui-sref-active="active"><a ui-sref="form">Form</a></li>
+                    <li ng-repeat="item in main.menu" ui-sref-active="active"><a ui-sref="{{item}}">{{item}}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                 </ul>
