--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,10 @@
         min-height: 2000px;
         padding-top: 70px;
     }
+
+    .list-group-item.active a {
+        color: white;
+    }
 </style>
 <body>
 
@@ -27,17 +31,19 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" ui-sref="dashboard">F5 Angular</a>
+                <a class="navbar-brand" ui-sref="dashboard">{{main.name}}</a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li ng-repeat="item in main.menu" ui-sref-active="active"><a ui-sref="{{item}}">{{item}}</a></li>
+                    <li ng-repeat="item in main.menu" ui-sref-active="active"><a ui-sref="{{item.name}}">{{item.data.title}}</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
     </nav>
+
+    <h1>{{main.title}}</h1>
 
     <ui-view></ui-view>
 </div>
