--- a/src/form/form.html
+++ b/src/form/form.html
@@ -1,5 +1,12 @@
-<h1>{{form.title}}</h1>
+<div class="row">
+    <div class="col-md-3">
+        <ul class="list-group">
+            <li class="list-group-item" ui-sref-active="active"><a ui-sref="grid1">Grid 1</a></li>
+            <li class="list-group-item" ui-sref-active="active"><a ui-sref="grid2">Grid 2</a></li>
+        </ul>
+    </div>
 
-<ul>
-    <li ng-repeat="item in form.items">{{item}}</li>
-</ul>
+    <div class="col-md-9">
+        <ui-view></ui-view>
+    </div>
+</div>
