--- a/src/form/grid1/grid1.html
+++ b/src/form/grid1/grid1.html
@@ -1,6 +1,6 @@
 <h3>Grid 1</h3>
 
-<input type="text" ng-model="grid.search" placeholder="Search"/>
+<input type="text" ng-model="grid.search" placeholder="Search" ng-model-options="{ debounce: 500 }"/>
 
 <table class="table table-hover">
 	<thead>
