html5 mode for router

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>F5 Angular</title>
-
+    <base href="/"/>
     <link rel="stylesheet" href="css/bootstrap.css"/>
 </head>
 
